--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,7 +14,7 @@ monitor=,highres,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar
+exec-once = waybar -s ~/dotfiles/waybar/style.css
 exec-once = swaync
 exec-once = nm-applet
 # exec-once = swww init && ~/Pictures/bing_wallpaper.jpg
@@ -56,7 +56,7 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 5
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
