--- a/waybar/config
+++ b/waybar/config
@@ -12,7 +12,7 @@
     "margin-left": 8,
     "margin-right": 8,
     "modules-left": [
-	    "custom/separator#dot-line",
+	    "custom/separator#line",
 	    "power-profiles-daemon",
 	    "group/mobo_drawer",
 	    "custom/separator#blank",
@@ -23,13 +23,15 @@
     "modules-center": [
 	    "clock",
 	    "custom/separator#line",
-	    "hyprland/workspaces",
+	    "hyprland/workspaces#pacman",
 	    "custom/separator#dot-line",
-	    "idle_inhibitor",	
+	    "idle_inhibitor",
+        "custom/shamsi"
     ],
     "modules-right": [
 	    "network#speed",
-	    "group/connections",
+	    "custom/separator#line",
+	    "custom/screenshot",
 	    "custom/separator#line",
 	    "tray",
 	    "mpris", 
@@ -172,22 +174,6 @@
 //        },
 //        // apt install gir1.2-playerctl-2.0
 //        "exec": "$HOME/.config/waybar/resources/./player.sh 2> /dev/null"
-//    },
-//    "custom/screenshot": {
-//        "format": " ",
-//        "tooltip": false,
-//        "min-length": 3,
-//        "on-click": "sleep 0.1 && grim -g \"$(slurp)\" - | swappy -f -",
-//        "on-click-middle": "grim -g \"$(hyprctl -t get_tree | jq -r '.. | select(.pid? and .visible?) | .rect | \"\\(.x),\\(.y) \\(.width)x\\(.height)\"' | slurp)\" - | swappy -f -"
-//    },
-//    "custom/shamsi": {
-//        "format": "{}",
-//        "escape": true,
-//        "tooltip": true,
-//        "return-type": "json",
-//        "min-length": 14,
-//        "exec": "$HOME/.config/waybar/resources/shamsi.sh",
-//        "interval": 60
 //    },
 //    "custom/updates": {
 //        "format": "{} 󰚰",
