--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,7 +14,7 @@ monitor=,highres,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar -s ~/dotfiles/waybar/style.css
+exec-once = waybar -s ~/.config/waybar/style.css
 exec-once = swaync
 exec-once = nm-applet
 # exec-once = swww init && ~/Pictures/bing_wallpaper.jpg
