🎨 [-] Wezterm and Hyprland colors changed

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -58,8 +58,8 @@ general {
     gaps_in = 5
     gaps_out = 5
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgb(216, 239, 211) rgb(149, 210, 179) 45deg
+    col.inactive_border = rgb(241, 248, 232)
 
     layout = dwindle
 
@@ -70,18 +70,18 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
+    rounding = 7
 
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 5
+        passes = 0
     }
 
     drop_shadow = true
     shadow_range = 4
     shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    col.shadow = rgb(85, 173, 155)
 }
 
 animations {
@@ -107,7 +107,6 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
 }
 
 gestures {
