--- a/waybar/config
+++ b/waybar/config
@@ -21,7 +21,7 @@
 	    "custom/weather"
     ],
     "modules-center": [
-	    "custom/clock",
+	    "clock",
 	    "custom/separator#line",
 	    "hyprland/workspaces#pacman",
 	    "custom/separator#dot-line",
