--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,7 +14,7 @@ monitor=,highres,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar -s ~/.config/waybar/style.css
+# exec-once = waybar -s ~/.config/waybar/style.css
 exec-once = swaync
 exec-once = nm-applet
 exec-once = swww init && ~/Pictures/bing_wallpaper.jpg
@@ -27,6 +27,7 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = udiskie &
 exec-once = swayosd-server
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = ~/.config/eww/bar/launch_bar
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
