✨ [-] Hyprland fullscreen config updated

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -144,7 +144,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, ~/dotfiles/scripts/pass.sh --type # copy paste username and password
 bind = $mainMod SHIFT, E, exec, ~/dotfiles/scripts/pass.sh # copy password only
-bind = $mainMod, F, togglefloating,
+bind = $mainMod, F, fullscreen, 1
 bind = $mainMod, R, exec, ~/.config/rofi/scripts/launcher_t6 -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
