--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -1,86 +1,87 @@
 gui:
-  windowSize: 'half'
+  windowSize: "half"
 customCommands:
-  - key: 'c'
-    context: 'files'
+  - key: "c"
+    context: "files"
     subprocess: true
     prompts:
-      - type: 'menu'
-        title: 'Choose your commit type:'
-        key: 'CommitType'
+      - type: "menu"
+        title: "Choose your commit type:"
+        key: "CommitType"
         options:
-          - name: '✨ FEATURE'
-            value: '✨'
-          - name: '🐛 BUG'
-            value: '🐛'
-          - name: '🚑️ HOTFIX'
-            value: '🚑️'
-          - name: '🎨 CHANGED'
-            value: '🎨'
-          - name: '🔒️ SECURITY'
-            value: '🔒️'
-          - name: '⬆️ BUMPED'
-            value: '⬆️'
-          - name: '🚧 WIP'
-            value: '🚧'
-          - name: '🔥 REMOVED'
-            value: '🔥'
-          - name: '🎉 INITIAL'
-            value: '🎉'
-      - type: 'input'
-        title: 'Enter your commit ID'
-        key: 'CommitId'
-        initialValue: '-'
-      - type: 'input'
-        title: 'Enter your commit message'
-        key: 'CommitMessage'
-        initialValue: ''
-      - type: 'menu'
-        title: 'Pre commit msg hook?'
-        key: 'PreCommitHook'
-        options:
-          - name: 'Yes'
-            value: ''
-          - name: 'No'
-            value: '--no-verify'
-    command: "git commit -m '{{.Form.CommitType}} [{{.Form.CommitId}}] {{.Form.CommitMessage}}' {{.Form.PreCommitHook}}"
-    loadingText: 'Commiting...'
-  - key: 'n'
-    context: 'localBranches'
-    subprocess: true
-    prompts:
-      - type: 'menu'
-        title: 'Choose your branch type:'
-        key: 'BranchType'
-        options:
-          - name: '✨ FEATURE'
-            value: 'feature'
-          - name: '🐛 BUG'
-            value: 'bugFix'
-          - name: '🚑️ HOTFIX'
-            value: 'hotFix'
-      - type: 'input'
-        title: 'Enter your task ID'
-        key: 'TaskId'
-        initialValue: ''
-      - type: 'input'
-        title: 'Enter your branch name'
-        key: 'BranchName'
-        initialValue: ''
-    command: "git checkout -b {{.Form.BranchType}}/T{{.Form.TaskId}}-{{.Form.BranchName}}"
-    loadingText: 'Creating new branch...'
-  - key: '<c-p>'
-    context: 'global'
-    subprocess: true
-    prompts:
-      - type: 'input'
-        title: 'Choose your target branch'
-        key: 'Target'
+          - name: "✨ FEATURE"
+            value: "✨"
+          - name: "🐛 BUG"
+            value: "🐛"
+          - name: "🚑️ HOTFIX"
+            value: "🚑️"
+          - name: "🎨 CHANGED"
+            value: "🎨"
+          - name: "🔒️ SECURITY"
+            value: "🔒️"
+          - name: "⬆️ BUMPED"
+            value: "⬆️"
+          - name: "🚧 WIP"
+            value: "🚧"
+          - name: "🔥 REMOVED"
+            value: "🔥"
+          - name: "🎉 INITIAL"
+            value: "🎉"
+      - type: "input"
+        title: "Enter your commit ID"
+        key: "CommitId"
         suggestions:
-          preset: 'branches'
-        initialValue: 'develop'
+          command: "echo {{.SelectedLocalBranch.Name}} | sed 's/^\\(bugFix\\|hotFix\\|feature\\)\\/T\\([0-9]*\\)\\-.*$/\\2/'"
+      - type: "input"
+        title: "Enter your commit message"
+        key: "CommitMessage"
+        initialValue: ""
+      - type: "menu"
+        title: "Pre commit msg hook?"
+        key: "PreCommitHook"
+        options:
+          - name: "Yes"
+            value: ""
+          - name: "No"
+            value: "--no-verify"
+    command: "git commit -m '{{.Form.CommitType}} [{{.Form.CommitId}}] {{.Form.CommitMessage}}' {{.Form.PreCommitHook}}"
+    loadingText: "Commiting..."
+  - key: "n"
+    context: "localBranches"
+    subprocess: true
+    prompts:
+      - type: "menu"
+        title: "Choose your branch type:"
+        key: "BranchType"
+        options:
+          - name: "✨ FEATURE"
+            value: "feature"
+          - name: "🐛 BUG"
+            value: "bugFix"
+          - name: "🚑️ HOTFIX"
+            value: "hotFix"
+      - type: "input"
+        title: "Enter your task ID"
+        key: "TaskId"
+        initialValue: ""
+      - type: "input"
+        title: "Enter your branch name"
+        key: "BranchName"
+        initialValue: ""
+    command: "git checkout -b {{.Form.BranchType}}/T{{.Form.TaskId}}-{{.Form.BranchName}}"
+    loadingText: "Creating new branch..."
+  - key: "<c-p>"
+    context: "global"
+    subprocess: true
+    prompts:
+      - type: "input"
+        title: "Choose your target branch"
+        key: "Target"
+        suggestions:
+          preset: "branches"
+        initialValue: "develop"
     command: "~/dotfiles/lazygit/merge_request.sh {{.Form.Target}}"
-    loadingText: 'Creating merge request...'
+    loadingText: "Creating merge request..."
 git:
   paging:
     externalDiffCommand: difft --color=always --display=inline --syntax-highlight=on
