--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -31,7 +31,7 @@ customCommands:
         title: "Enter your commit ID"
         key: "CommitId"
         suggestions:
-          command: "echo {{.SelectedLocalBranch.Name}} | sed 's/^\\(bugFix\\|hotFix\\|feature\\)\\/T\\([0-9]*\\)\\-.*$/\\2/'"
+          command: "echo $(git rev-parse --abbrev-ref HEAD) | sed 's/^\\(bugFix\\|hotFix\\|feature\\)\\/T\\([0-9]*\\)\\-.*$/\\2/'"
       - type: "input"
         title: "Enter your commit message"
         key: "CommitMessage"
