--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,6 +15,7 @@ monitor=,highres,auto,1
 
 # Execute your favorite apps at launch
 # exec-once = waybar -s ~/.config/waybar/style.css
+# exec-once = waybar -c ~/.config/waybar/style_2/config -s ~/.config/waybar/style_2/style.css
 exec-once = swaync
 exec-once = nm-applet
 exec-once = swww init && ~/Pictures/bing_wallpaper.jpg
