--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -184,3 +184,5 @@ bindm = $mainMod, mouse:273, resizewindow
 
 #custom binds
 bind = $mainMod, ESCAPE, exec, ~/.config/rofi/applets/bin/powermenu.sh # dwindle
+bind = , XF86MonBrightnessUp, exec, brightnessctl set 10%+ # Increase backlight brightness by 10%
+bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%- # Decrease backlight brightness by 10%
