--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -99,3 +99,7 @@ language-servers = [ "bash-language-server" ]
 [language-server.bash-language-server]
 command = "bash-language-server"
 args = ["start"]
+
+[[language]]
+name = "java"
+language-servers = [ "jdtls" ]
