--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -142,7 +142,7 @@ bind = $mainMod, F, fullscreen, 1
 bind = $mainMod, R, exec, ~/.config/rofi/scripts/launcher_t6 -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, V, exec, cliphist list | rofi -dmenu -config ~/dotfiles/rofi/themes/rounded-blue-dark.rasi | cliphist decode | wl-copy
+# bind = $mainMod, V, exec, cliphist list | rofi -dmenu -config ~/dotfiles/rofi/themes/rounded-blue-dark.rasi | cliphist decode | wl-copy
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, l, movefocus, l
